--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,8 @@
   ],
   "editor.formatOnPaste": false,
   "eslint.format.enable": true,
-  "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  "editor.defaultFormatter": "dbaeumer.vscode-eslint",
+  "[xml]": {
+    "editor.defaultFormatter": "redhat.vscode-xml"
+  }
  }
