--- a/package.json
+++ b/package.json
@@ -7,13 +7,25 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-redux": "^8.0.1",
-    "react-router-dom": "^6.3.0",
+    "antd": "^4.20.5",
+    "axios": "^0.27.2",
+    "formik": "^2.2.9",
+    "history": "^4.10.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0",
+    "react-saga": "^0.3.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
-    "web-vitals": "^2.1.4"
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.4.1",
+    "sass-loader": "^12.6.0",
+    "styled-component": "^2.8.0",
+    "styled-components": "^5.3.5",
+    "tailwindcss": "^3.0.24",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
