--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.20.5",
+    "@tinymce/tinymce-react": "^4.1.0",
+    "antd": "^4.20.6",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "history": "^4.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-saga": "^0.3.1",
