--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "history": "^4.10.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-saga": "^0.3.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.4.5",
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
