--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tinymce/tinymce-react": "^4.1.0",
     "antd": "^4.20.6",
     "axios": "^0.27.2",
+    "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "history": "^4.10.0",
     "lodash": "^4.17.21",
